# pymock

./: README.md  requirements.txt  run.py  setup.cfg
docs/: conf.py
examples/case_1/: README.md  ex1_frompy.py
examples/case_1/expected/: pymock_2011-01-01_2011-01-02.csv
examples/case_1/input/: args.txt
examples/case_2/: README.md  ex2_frompy.py  ex2_fromsh.sh
examples/case_2/input/: args.txt
examples/case_3/: README.md  ex3_frompy.py  ex3_fromsh.sh
examples/case_3/input/: args.txt
input/: args.txt
pymock/: libs.py  main.py
tests/: test_functions.py  test_reader.py  test_writer.py
tests/artifacts/: args_test.txt  iside_tests
