[metadata]
name = pymock
description = Mock-up model for the Italy Experiment
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = LICENSE
version = 0.1.0
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
url = https://git.gfz-potsdam.de/csep/it_experiment/models/pymock

[options]
packages =
    pymock
install_requires =
    numpy==2.0.1
    matplotlib==3.9.1
python_requires = >=3.9, <3.12
zip_safe = no

[options.extras_require]
dev =
    numpy==2.0.1
    matplotlib==3.9.1
    pytest==8.3.2
    tox
    sphinx
    sphinx-gallery
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    pymock = pymock.main:run

[flake8]
max-line-length = 79